<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mubarak.pulsa.RechargeFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="false"
        style="@style/Text">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/nomor"
        android:layout_marginBottom="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nominal"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"
        style="@style/Text"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        style="@style/radio">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nominal1"
            android:id="@+id/radioButton"
            android:layout_marginBottom="5dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nominal2"
            android:id="@+id/radioButton2"
            android:layout_marginBottom="5dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nominal3"
            android:id="@+id/radioButton3"
            android:layout_marginBottom="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nominal4"
            android:id="@+id/radioButton4"
            android:layout_marginBottom="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nominal5"
            android:id="@+id/radioButton5"
            android:layout_marginBottom="5dp"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kirim"
        android:id="@+id/button"
        android:onClick="kirim"
        android:layout_gravity="center_horizontal"
        style="@style/button"/>
</LinearLayout>
